Adding a layout to generate list of news posts.

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ defaults:
       path: ""
       type: posts
     values:
-      layout: news
+      layout: newspost
       category: news
   - scope:
       path: ""
