--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Boulder DSA
+email: boulderdsa@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+    Boulder DSA is a local chapter of the Democratic Socialists of America,
+    covering Boulder and Broomfield counties.  We find that unchecked capitalism
+    has created a society that puts corporate profit above human rights, and we
+    are committed to changing that through direct, grassroots action.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://boulderdsa.org" # the base hostname & protocol for your site, e.g. http://example.com
+author: Boulder DSA
 
 # Build settings
 markdown: kramdown
@@ -34,6 +36,8 @@ exclude:
 sass:
 #    style: :compressed
 
+plugins:
+  - jekyll-feed
 
 defaults:
   - scope:
