--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ socialmedia:
 - name: twitter
   url: https://twitter.com/boulderDSA
 - name: instagram
-  url: "#"
+  url:
 - name: mastodon
   url: https://soc.ialis.me/@BoulderDSA
 - name: diaspora
