Split Contact into Contact and Join

--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,10 @@ navlinks:
   url: /calendar/
 - title: CU YDSA
   url: /ydsa/
-- title: Contact Us
+- title: Contact
   url: /contact/
+- title: Join Us
+  url: /join/
 
 socialmedia:
 - name: facebook
