Added new member tab

--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,8 @@ navlinks:
   url: /ydsa/
 - title: Contact
   url: /contact/
+- title: Help Getting Started
+  url: /getting_started/
 - title: Join Us
   url: /join/
 
