adding donate page

--- a/_config.yml
+++ b/_config.yml
@@ -85,6 +85,8 @@ navlinks:
   url: /getting_started/
 - title: Join Us
   url: /join/
+- title: Donate
+  url: /donate/
 
 socialmedia:
 - name: facebook
